[package]
name = "htmlescape-plus"
version = "0.3.1"
authors = [ "Viktor Dahl <pazaconyoman@gmail.com>",
            "ykonomi <hgKaguyaToupako4er@gmail.com>" ]
license = "Apache-2.0 / MIT / MPL-2.0"
repository = "https://github.com/ykonomi/rust-htmlescape"
description = "A library for HTML entity encoding and decoding"
build = "build.rs"

[lib]
name = "htmlescape"
path = "src/lib.rs"

[dev-dependencies]
num = "0.1.26"
rand = "0.3.14"

[build-dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.0"
failure = "0.1.2"
curl = "0.4.17"
lazy_static = "1.1.0"