[package]
name = "htmlescape-plus"
version = "0.3.2"
authors = [ "Viktor Dahl <pazaconyoman@gmail.com>",
            "ykonomi <hgKaguyaToupako4er@gmail.com>" ]
license = "Apache-2.0 / MIT / MPL-2.0"
repository = "https://github.com/ykonomi/rust-htmlescape"
description = "A library for HTML entity encoding and decoding"

[lib]
name = "htmlescape"
path = "src/lib.rs"

[dev-dependencies]
num = "0.1.26"
rand = "0.3.14"
